module-05/book-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books
  template:
    metadata:
      labels:
        app: books
    spec:
      containers:
      - name: app
        image: hashicorp/http-echo
        args:
          - "-text=Hello from BOOKS service"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: book-service
spec:
  selector:
    app: books
  ports:
  - port: 80
    targetPort: 5678
